[workspace]

members = [
  "./agent-proto",
  "./ambiwidth",
  "./assert_trait",
  "./aws-assume-role",
  "./corretto-pkgbuild",
  "./dockerhub-login",
  "./envwarden",
  "./errno",
  "./gh-contrib",
  "./github-api-v4-sample",
  "./go-bridge-sample",
  "./graphql-sample/sample-client",
  "./graphql-sample/sample-server",
  "./grpc-sample",
  "./gyazo",
  "./jrsonnet-lint",
  "./ltsv-select",
  "./miam2tf",
  "./pfs-unpack",
  "./ray-tracing-one-weekend",
  "./rdig",
  "./s3-du",
  "./s3-prefix-get",
  "./tls-cert-expiration",
  "./xft-height",
]
