[workspace]
resolver = "2"

members = [
  "./agent-proto",
  "./ambiwidth",
  "./assert_trait",
  "./aws-assume-role",
  "./corretto-pkgbuild",
  "./dockerhub-login",
  "./envwarden",
  "./errno",
  "./gh-contrib",
  "./git-pkgbuild-commit",
  "./github-api-v4-sample",
  "./go-bridge-sample",
  "./graphql-sample/sample-client",
  "./graphql-sample/sample-server",
  "./grpc-sample",
  "./gyazo",
  "./jrsonnet-lint",
  "./miam2tf",
  "./pfs-unpack",
  "./ray-tracing-one-weekend",
  "./rdig",
  "./s3-du",
  "./s3-prefix-get",
  "./tls-cert-expiration",
  "./xft-height",
]

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
prost = "0.11"
reqwest = { version = "0.11", default-features = false, features = ["gzip", "rustls-tls", "stream", "trust-dns", "json"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "process", "tracing"] }
tonic = "0.9"
tonic-build = "0.9"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bindgen = "0.66"
anstream = "0.3"
anstyle = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
graphql_client = { version = "0.13", features = ["reqwest-rustls"] }
futures = "0.3"
