[workspace]
resolver = "2"

members = [
  "./agent-proto",
  "./ambiwidth",
  "./assert_trait",
  "./aws-assume-role",
  "./corretto-pkgbuild",
  "./dockerhub-login",
  "./envwarden",
  "./errno",
  "./gh-contrib",
  "./git-pkgbuild-commit",
  "./github-api-v4-sample",
  "./go-bridge-sample",
  "./graphql-sample/sample-client",
  "./graphql-sample/sample-server",
  "./grpc-sample",
  "./gyazo",
  "./jrsonnet-lint",
  "./miam2tf",
  "./pfs-unpack",
  "./ray-tracing-one-weekend",
  "./rdig",
  "./s3-du",
  "./s3-prefix-get",
  "./tls-cert-expiration",
  "./xft-height",
  "./unused-libsonnet",
]

[workspace.dependencies]
anstream = "0.6"
anstyle = "1"
anyhow = { version = "1", features = ["backtrace"] }
aws-config = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sts = { version = "1", default-features = false, features = ["default-https-client"] }
bindgen = "0.71"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
graphql_client = "0.14"
jrsonnet-evaluator = "0.5.0-pre95"
jrsonnet-gcmodule = "0.3"
jrsonnet-parser = "0.5.0-pre95"
jrsonnet-stdlib = "0.5.0-pre95"
libc = "0.2"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "rustls-tls", "stream", "trust-dns", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "process", "tracing"] }
tonic = "0.12"
tonic-build = "0.12"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
