[package]
name = "grpc"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11"

[dependencies]
bytes = "1"
hpack_codec = "0.1"
prost = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std"] }
tokio-rustls = "0.24"
webpki-roots = "0.23"
