[package]
name = "grpc"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.12"

[dependencies]
bytes = "1"
hpack_codec = "0.1"
prost = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
webpki-roots = "0.26"
