[package]
name = "agent-proto"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build.workspace = true

[dependencies]
anyhow.workspace = true
libc.workspace = true
nix = { version = "0.27", features = ["fs", "process"] }
prost.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
