[package]
name = "ambiwidth"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
regex = "1.4"
reqwest = { version = "0.10", default-features = false, features = ["gzip", "rustls-tls", "stream", "trust-dns"] }
tokio = { version = "0.2", default-features = false, features = ["macros"] }
