[package]
name = "ambiwidth"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["gzip", "rustls-tls", "stream", "trust-dns"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
