[package]
name = "ambiwidth"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1"
regex-lite = "0.1"
reqwest.workspace = true
tokio.workspace = true
