[package]
name = "aws-assume-role"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
aws-config.workspace = true
aws-sdk-sts.workspace = true
tokio.workspace = true
