[package]
name = "corretto-pkgbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
handlebars = "4"
octocrab = "0.30"
# https://github.com/raphlinus/pulldown-cmark/pull/672 is needed to parse Markdown of https://github.com/corretto/corretto-11/releases/tag/11.0.20.9.1 .
pulldown-cmark = { git = "https://github.com/raphlinus/pulldown-cmark", rev = "b30808bc85ca26d2eec4f6a4b6a9c2536af1d06b", default-features = false }
serde.workspace = true
tendril = "0.4"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
