[package]
name = "corretto-pkgbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
handlebars = "6"
octocrab = "0.43"
pulldown-cmark = { version = "0.13", default-features = false }
serde.workspace = true
tendril = "0.4"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
