[package]
name = "gh-contrib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
graphql_client = { version = "0.12", features = ["reqwest-rustls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = "1"
tokio = { version = "1", features = ["macros", "rt", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
