[package]
name = "gh-contrib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstream.workspace = true
anstyle.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
graphql_client.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
