[package]
name = "github-api-v4-sample"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
graphql_client = { version = "0.13", features = ["reqwest-rustls"] }
jsonwebtoken = "8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
