[package]
name = "graphql-sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.8"
hyper = "0.14"
juniper = "0.15"
juniper_warp = "0.7"
listenfd = "0.3.3"
serde_json = "1.0.64"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
