[package]
name = "grpc-sample"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

[build-dependencies]
tonic-build = { version = "0.2" }

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "1.8", features = ["full"] }

[[bin]]
name = "greeter_client"

[[bin]]
name = "greeter_server"
