[package]
name = "gyazo"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

[dependencies]
rusoto_core = { version = "0.41", default-features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.41", default-features = false, features = ["rustls"] }
rust-crypto = "0.2"
