[package]
name = "gyazo"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
rusoto_core = { version = "0.43.0-beta.1", default-features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.43.0-beta.1", default-features = false, features = ["rustls"] }
rust-crypto = "0.2"
tokio = { version = "0.2", features = ["full"]}
