[package]
name = "ray-tracing-one-weekend"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6"
num = "0.4"
rand = "0.9"
rand_xorshift = "0.4"
rayon = "1"
