[package]
name = "rdig"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2024"

[dependencies]
anstream.workspace = true
anstyle.workspace = true
tokio.workspace = true
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime", "dns-over-https-rustls"] }
