[package]
name = "rdig"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2024"

[dependencies]
anstream.workspace = true
anstyle.workspace = true
hickory-resolver = { version = "0.25", default-features = false, features = ["tokio", "https-aws-lc-rs", "rustls-platform-verifier"] }
tokio.workspace = true
tracing-subscriber.workspace = true
