[package]
name = "s3-du"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.9"
aws-sdk-s3 = "0.9"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
