[package]
name = "s3-prefix-get"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55"
aws-sdk-s3 = "0.26"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
