[package]
name = "s3-prefix-get"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
bytes = "1"
clap.workspace = true
futures.workspace = true
tokio.workspace = true
