[package]
name = "tls-cert-expiration"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
rustls = "0.21"
rustls-native-certs = "0.6"
webpki = "0.22"
x509-parser = "0.15"
