[package]
name = "tls-cert-expiration"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2021"

[dependencies]
chrono.workspace = true
clap.workspace = true
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-native-certs = "0.7"
x509-parser = "0.16"
