[package]
name = "tls-cert-expiration"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2024"

[dependencies]
chrono.workspace = true
clap.workspace = true
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-native-certs = "0.8"
x509-parser = "0.17"
