[package]
name = "sample-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.10", features = ["reqwest"] }
reqwest = { version = "0.11", default-features = false }
serde = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.28"
web-sys = "0.3"
yew = "0.19"
