[package]
name = "sample-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.13", features = ["reqwest-rustls"] }
reqwest = { version = "0.11", default-features = false }
serde = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = { version = "0.20", features = ["csr"] }
