[package]
name = "sample-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum = "0.6"
juniper = { version = "0.15", default-features = false }
juniper_hyper = "0.8"
listenfd = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio.workspace = true
tower.workspace = true
tower-http = { version = "0.4", features = ["trace"] }
tracing-subscriber.workspace = true
