[package]
name = "sample-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum = "0.7"
juniper = { version = "0.16", default-features = false }
juniper_axum = "0.1"
listenfd = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio.workspace = true
tower.workspace = true
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber.workspace = true
