[package]
name = "sample-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum = "0.8"
juniper = { version = "0.16", default-features = false }
juniper_axum = "0.2"
listenfd = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres"] }
tokio.workspace = true
tower.workspace = true
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber.workspace = true
